--- a/client-app-ts/src/index.css
+++ b/client-app-ts/src/index.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: .3em;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
@@ -8,7 +8,13 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code,
+pre {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+a.active {
+    border-bottom-width: 5px;
+    border-bottom-style: solid;
 }
