--- a/client-app-ts/src/index.css
+++ b/client-app-ts/src/index.css
@@ -32,3 +32,21 @@ a.nav-link.active {
     border-bottom-width: 0.1em;
     border-bottom-style: solid;
 }
+
+/* Global ScrollBar */
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(155, 155, 155, 0.3);
+    background-color: transparent;
+}
+
+*::-webkit-scrollbar {
+    width: 12px;
+    background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    height:  10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: rgba(133, 133, 133, 0.3);
+}
